<resources>
    <string name="app_name">TextView</string>
    <string name="gravity_text">TextView With Gravity Center</string>
    <string name="text_background">Text View Backgound Color</string>
    <string name="text_with_largetextsize">TextView With Large Text Size</string>
    <string name="textview_content_scrollbar">TextView with More More and more contentTextView with More
        More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more contentTextView with More More and more content</string>
<string name="textview_with_color_change">TextView With Color Change</string>
</resources>
